--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 # site info
+name: Transmogrifier
+description: Changing for the better.
 author: Daniel Duckworth
 url: http://www.transmogrifier.com
 
